# marketing-brain-engine

./: .env.example  .gitignore  LICENSE  Makefile  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: analyze.yml  ci.yml  create.yml  discover.yml  engage.yml  publish.yml
config/: agents.yaml  brand.yaml  providers.yaml
docs/: ARCHITECTURE.md  index.html
marketing_brain/: __init__.py  budget.py  orchestrator.py  settings.py  state.py
marketing_brain/agents/: __init__.py  analyze.py  base.py  create.py  discover.py  distribute.py  engage.py  strategy.py
marketing_brain/control_plane/: __init__.py  airtable_store.py  base.py  local_store.py  sheets_store.py
marketing_brain/pipelines/: __init__.py
marketing_brain/providers/: __init__.py  base.py  design_canva.py  image_flux.py  llm_anthropic.py  video_heygen.py  video_shortform.py  voice_elevenlabs.py
schema/: airtable_schema.json
scripts/: run_stage.py  setup_airtable.py  simulate_approval.py
tests/: test_control_plane.py  test_pipeline_smoke.py
