[project]
name = "marketing-brain"
version = "0.1.0"
description = "Autonomous, human-approved AI content engine on GitHub Actions + Airtable/Sheets"
requires-python = ">=3.10"
dependencies = ["anthropic>=0.39", "requests>=2.31", "PyYAML>=6.0", "python-dotenv>=1.0", "tenacity>=8.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
